--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "admin",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@ant-design/icons": "^4.0.3",
     "@testing-library/jest-dom": "^4.2.4",
