--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.0.4",
     "apollo-boost": "^0.4.7",
+    "apollo-cache-updater": "^0.1.3",
     "graphql": "^14.6.0",
     "react": "^16.13.1",
     "react-apollo": "^3.1.3",
