--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^16.9.6",
     "@types/react-redux": "^7.1.7",
     "antd": "^4.0.4",
+    "apollo": "^2.26.0",
     "apollo-boost": "^0.4.7",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-cache-updater": "^0.1.3",
@@ -32,7 +33,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-app-env --env-file=.env.production build",
-    "deploy-gh-pages": "npm run build && gh-pages -d build"
+    "deploy-gh-pages": "npm run build && gh-pages -d build",
+    "schema": "apollo client:download-schema --endpoint=http://localhost:3005/graphql ./src/schema.json",
+    "types": "apollo client:codegen ./src/__generated__/types.ts --outputFlat --includes=./src/**/query.ts --addTypename --localSchemaFile=./src/schema.json --target=typescript"
   },
   "eslintConfig": {
     "extends": "react-app"
