--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "homepage": ".",
   "dependencies": {
     "@ant-design/icons": "^4.0.3",
-    "@apollo/react-hooks": "latest",
+    "@apollo/react-hooks": "^3.1.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/antd": "^1.0.0",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.11.0",
     "@types/react": "^16.9.32",
@@ -21,9 +22,11 @@
     "apollo-cache-updater": "^0.1.3",
     "apollo-link": "latest",
     "apollo-link-http": "latest",
+    "customize-cra": "^0.9.1",
     "graphql": "^14.6.0",
     "react": "^16.13.1",
     "react-apollo": "^3.1.3",
+    "react-app-rewired": "^2.1.5",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
@@ -32,10 +35,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start-antd": "react-app-rewired start",
     "build": "react-app-env --env-file=.env.production build",
     "deploy-gh-pages": "npm run build && gh-pages -d build",
     "schema": "apollo client:download-schema --endpoint=http://localhost:3005/graphql ./src/schema.json",
-    "types": "apollo client:codegen ./src/__generated__/types.ts --outputFlat --includes=./src/**/query.ts --addTypename --localSchemaFile=./src/schema.json --target=typescript"
+    "types": "apollo client:codegen ./src/__generated__/types.ts --outputFlat --includes=./src/**/mutations.ts --addTypename --localSchemaFile=./src/schema.json --target=typescript"
   },
   "eslintConfig": {
     "extends": "react-app"
