--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "typescript": "^3.8.3"
   },
   "scripts": {
