--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
     "@types/react-redux": "^7.1.7",
+    "@typescript-eslint/eslint-plugin": "^2.29.0",
+    "@typescript-eslint/parser": "^2.29.0",
     "antd": "^4.0.4",
     "apollo": "^2.26.0",
     "apollo-boost": "^0.4.7",
@@ -29,7 +31,16 @@
     "apollo-link": "latest",
     "apollo-link-http": "latest",
     "customize-cra": "^0.9.1",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-standard": "^4.0.1",
     "graphql": "^14.6.0",
+    "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-apollo": "^3.1.3",
     "react-app-rewired": "^2.1.5",
