adding search fix eslint warn

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ yarn-error.log*
 Будет удалено .env
 Будет удалено .idea/
 Будет удалено node_modules/
+/.idea/inspectionProfiles/Project_Default.xml
